<resources>
    <string name="app_name">智播</string>
    <string name="app_init_faile">初始化失败，请确认网络畅通！</string>
    <string name="str_regist_sucess">注册成功</string>
    <string name="str_regist_failure">注册失败</string>
    <string name="str_login_sucess">登录成功</string>
    <string name="str_login_failure">登录失败</string>
    <string name="str_send_failure">发送失败</string>
    <string name="str_net_erro">网络错误</string>
    <string name="str_">网络错误</string>
    <string name="str_password">密码</string>
    <string name="str_password_hint">请输入6-16位密码</string>
    <string name="str_password_toast">密码长度6-16位</string>
    <string name="str_modify_success">修改密码成功</string>
    <string name="str_modify_failure">修改密码失败</string>
    <string name="str_old_password">原密码</string>
    <string name="str_regist">注册</string>
    <string name="str_login">登录</string>
    <string name="str_resetpass">找回密码</string>
    <string name="str_forget_pass">忘记密码</string>
    <string name="str_other_login">其他账号登录</string>
    <string name="str_home">主页</string>
    <string name="str_reset_failure">重置密码失败</string>
    <string name="str_modify_pass">修改密码</string>
    <string name="str_private_introduce">用户隐私说明以及其他信息, 点击这里了解更多</string>
    <string name="str_already_regist">请输入11位手机号</string>
    <string name="str_phone">手机号</string>
    <string name="str_phonenumber">手机</string>
    <string name="str_send_code">发验证码</string>
    <string name="str_code">验证码</string>
    <string name="str_code_prompt">请输入4位验证码</string>
    <string name="str_password_prompt">请输入6-16位新密码</string>
    <string name="str_password_prompt2">请输入6-16位密码</string>
    <string name="str_password_prompt3">请输入6-16原位密码</string>
    <string name="str_commit">提交</string>
    <string name="str_nickname">昵称</string>
    <string name="str_new_password">新密码</string>
    <string name="str_immediate_regist">立即注册</string>
    <string name="str_start_live">开始直播</string>
    <string name="str_select_cover_warn">请选择一张图片作为直播间封面!</string>
    <string name="str_user_online_count">live . %d人</string>
    <string name="str_user_replay_count">replay . %d次</string>
    <string name="loading">正在加载...</string>
    <string name="cancel">取消</string>
    <string name="str_ok">确定</string>
    <string name="str_confirm">确认</string>
    <string name="exit">退出直播</string>
    <string name="is_exit">确定退出直播?</string>
    <string name="charge_title_tip">充值</string>
    <string name="charge_message_tip">当前金币不足，是否需要充值？</string>
    <string name="str_hot">热门</string>
    <string name="str_tip">提示</string>
    <string name="str_subscribe">关注</string>
    <string name="str_new">最新</string>
    <string name="str_request_erro">请求网路失败</string>
    <string name="str_share_data_error">分享信息获取失败！</string>
    <string name="str_personal_center">个人中心</string>
    <string name="str_setting">设置</string>
    <string name="str_bind_phone">手机绑定</string>
    <string name="str_logout">退出登录</string>
    <string name="str_is_logout">确定退出登录吗?</string>

    <string name="str_cleancache">清理缓存</string>
    <string name="str_is_cleancache">确定要清理缓存吗?</string>

    <string name="str_delete_sucess">删除成功</string>
    <string name="str_delete_failure">删除失败!</string>
    <string name="str_about">关于我们</string>
    <string name="str_approve">认证</string>
    <string name="str_user_info">编辑个人信息</string>
    <string name="str_zero_size">0.0b</string>
    <string name="str_sending">发送中...</string>
    <string name="str_approve_prompt1">上传清晰的身份证正面:</string>
    <string name="str_approve_prompt2">上传清晰的身份证背面:</string>
    <string name="str_select_front">上传身份证正面</string>
    <string name="str_select_back">上传身份证背面</string>
    <string name="str_select_failure">选择图片失败!</string>
    <string name="str_upload_id_card_warn">正面和反面身份证照片都必须提供!</string>
    <string name="str_upload_success">上传成功!</string>
    <string name="str_finish">完成</string>
    <string name="str_give_up_edit">放弃编辑?</string>
    <string name="str_give_up_edit_warn">您确定要放弃当前已经修改过的信息吗?</string>
    <string name="str_give_up">放弃</string>
    <string name="str_continue_edit">继续编辑</string>
    <string name="str_introduce">简介</string>
    <string name="str_nick_name_prompt">昵称长度不超过8个字符</string>
    <string name="str_introduce_prompt">简介长度不超过20个字符</string>
    <string name="str_cleaning">清除缓存中...</string>
    <string name="str_upload_image">图片上传中</string>
    <string name="str_upload_image_failure">上传失败!</string>
    <string name="str_upload_image_success">上传成功!</string>
    <string name="str_already_follow">已关注</string>
    <string name="str_follow">+  关注</string>
    <string name="str_unbind">解除绑定</string>
    <string name="str_ranking">主播排行榜</string>
    <string name="str_gold_rank">金币赠送榜</string>
    <string name="str_receive_star">收到的赞</string>
    <string name="str_history">历史记录</string>
    <string name="str_exchange_gold">兑换成金币</string>
    <string name="str_gold">金币</string>
    <string name="str_with_draw">提现</string>
    <string name="str_star_amount">累计的赞</string>
    <string name="str_gold_amount">累计金币</string>
    <string name="str_frequently_follow_prompt">请勿频繁操作~</string>
    <string name="str_cant_follow_self">不能关注自己</string>


    <string name="str_is_exchange">您确定兑换吗?</string>
    <string name="str_is_top_up">您确定申请提现吗?</string>
    <string name="str_exchange_detail" formatted="false">您将消耗 %d 赞兑换 %d 金币</string>
    <string name="str_gold_with_draw_detail" formatted="false">您正在申请 %d 金币兑换 %d 人民币提现到 %s</string>
    <string name="str_exchanging">兑换中...</string>
    <string name="str_top_uping">充值中...</string>
    <string name="str_with_drawing">提现中...</string>
    <string name="str_exchange_success">兑换成功</string>
    <string name="str_load_more_prompt">已经全部加载完毕</string>
    <string name="str_not_online_prompt">主播还未开播，看看其他的吧~</string>
    <string name="str_not_exchange_gold">您还没有兑换过金币~</string>
    <string name="str_loading">加载中...</string>
    <string name="str_loading_hard">正在努力加载...</string>
    <string name="str_share">分享至</string>
    <string name="str_change_cover">更改封面</string>
    <string name="str_follow_success">关注成功</string>
    <string name="str_loging">登录中...</string>
    <string name="str_registing">注册中...</string>
    <string name="str_has_sent">送出:</string>
    <string name="str_replay">重新播放</string>
    <string name="str_not_wifi_prompt">当前网络不在wifi环境下~</string>
    <string name="str_disconnect">链接失败, 是否继续等待?</string>
    <string name="str_fans">粉丝</string>
    <string name="str_talk">聊天</string>
    <string name="str_shutup">禁言</string>
    <string name="str_blacklist">拉黑</string>
    <string name="str_top_up">充值</string>
    <string name="str_amount_gold">累计金币</string>
    <string name="str_chat_rule">文明直播，拒绝黄赌毒及挑逗性内容，24小时巡视，违者将被封号或禁言处理。</string>
    <string name="str_im_reconnect_tip">IM服务器正在连接中...</string>
    <string name="str_im_reconnect_successe_tip">连接成功</string>
    <string name="str_im_send_text_timeout">发送超时</string>
    <string name="str_bind_account">设置提现账号</string>
    <string name="str_bind_account_prompt">注 : 账户均只能绑定一次, 绑定之后不可更改</string>
    <string name="str_follow_presenter">关注了主播。</string>
    <string name="str_pass_input_prompt">密码必须包含大小字母小写字母和数字</string>
    <string name="str_nickname_prompt">请输入小于9位昵称</string>
    <string name="str_phone_prompt">请输入11位手机号</string>
    <string name="str_gold_not_enough">当前金币不足，请先充值！</string>
    <string name="str_please_choose_gift">请先选择礼物！</string>
    <string name="str_service_item">服务条款</string>
    <string name="str_bind_account_show">当前交易使用 {%s} 点击更改账号 >></string>
    <string name="str_i_konw">我知道了</string>
    <string name="str_you_has_be_banned">非常抱歉，您已经被禁言，无法发布任何言论。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_top_up_success">充值成功</string>
    <string name="str_with_draw_success">提交成功，等待处理</string>
    <string name="str_binding">绑定中...</string>
    <string name="str_unbinding">解绑中...</string>
    <string name="str_unbind_success">解绑成功</string>

    <!--是用详情-->
    <string name="use_dtail">使用详情</string>
    <string name="deal_success">交易成功</string>
    <string name="deal_fail">交易失败</string>
    <string name="wait_deal">等待处理</string>
    <string name="deal_info">交易说明</string>
    <string name="deal_accout">交易账号</string>
    <string name="ctime">交易时间</string>


    <string name="str_default_location">来自火星</string>
    <string name="str_default_intro">这家伙很懒,什么也没有留下</string>
    <string name="str_tip_intro">点击编辑你的用户信息</string>
    <string name="str_send_presenter">送主播</string>
    <string name="str_limit_play_prompt">你被禁播到 %s</string>
    <string name="str_continue_wait">继续等待</string>
    <string name="str_retire">放弃</string>
    <string name="str_gold_account_prompt">绑定提现账号</string>
    <string name="str_mine_home">我的主页</string>
    <string name="str_raise_speak">举手发言</string>
    <string name="str_agree">同意</string>
    <string name="str_network_error_action">网络加载异常，请重新尝试!</string>
    <string name="str_zhibosdk_error">zhiboSDK初始化失败!</string>
    <string name="str_banned_success">禁言成功</string>
    <string name="str_warning">警告</string>
    <string name="str_warning_permission">当前应用缺少必要权限，请点击&quot;设置&quot;-&quot;权限&quot;-打开所需权限。</string>

    <!--permission-->
    <string name="str_permissions">智播需要相机和录音等权限才能正常使用！</string>
    <string name="rationale_ask_again">智播没有获得这些权限无法正常使用，请在设置中赋予权限！</string>
    <string name="title_settings_dialog">权限请求</string>

    <string name="str_get_photo_title">更换头像</string>
    <string name="str_get_photo_from_carema">拍摄新照片</string>
    <string name="str_get_photo_from_thumb">从相册选择</string>
    <string name="str_modify">修改</string>
    <string name="str_get_userinfo_fail">用户信息加载失败,请刷新重试</string>

</resources>
