<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tool="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                         xmlns:tool="http://schemas.android.com/tools"
                                         android:layout_width="300dp"
                                         android:layout_gravity="center_horizontal"
                                         android:layout_height="wrap_content"
                                         android:background="@drawable/shape_stroke_corner_bg_white"
                                         android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/bt_userinfo_set"
                android:layout_width="0px"
                android:visibility="invisible"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="28dp"
                android:paddingRight="28dp"
                android:src="@mipmap/ic_me_shezhi_grey"/>

            <TextView
                android:id="@+id/tv_userinfo_name"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="center"
                android:textColor="@color/color_font_black_light"
                android:textSize="@dimen/font_large"
                tool:text="笨鸟先飞"

                />

            <TextView
                android:id="@+id/tv_userinfo_city"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="center"
                android:textColor="@color/color_light_gray"
                android:textSize="@dimen/font_smart_little"
                tool:text="成都成都"

                />

        </LinearLayout>
        <View
        style="@style/divider_style_horizontal"
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/iv_userinfo_item_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/pic_touxiang_150"/>

            <ImageView
                android:id="@+id/iv_userinfo_item_verified"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignRight="@id/iv_userinfo_item_icon"

                android:layout_marginTop="50dp"
                android:background="@mipmap/ico_certified_02"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_heart"/>

            <TextView
                android:id="@+id/tv_userinfo_zan_nums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/color_font_black_light"
                android:textSize="@dimen/font_normal"
                tool:text="234564"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_userinfo_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:paddingLeft="37dp"
            android:paddingRight="37dp"
            android:textSize="14sp"
            tool:text="我是一个不需要简介的人，就啊这个更健康的数据库的加工费高考倒计时卡股份看"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userinfo_fans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_blue_light"
                    tool:text="23456"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2px"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_light_gray"
                    android:text="@string/str_fans"/>
            </LinearLayout>

            <View
                style="@style/divider_style_veitical"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userinfo_attention"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_blue_light"
                    tool:text="23456"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_light_gray"
                    android:text="@string/str_subscribe"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="37dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <Button
                android:id="@+id/bt_userinfo_talk"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/selector_blue_box"
                android:text="@string/str_talk"
                android:textColor="@color/color_blue_light"
                android:visibility="gone"/>

            <com.zhiyicx.zhibolibrary.ui.components.FllowButtonView
                android:id="@+id/bt_userinfo_attention"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/shape_blue_solid"
                android:textColor="@color/white"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>